{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 203,
  "lineage": "12e975f9-5e34-4daf-1758-9ef77be985a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-2757f631",
            "arn": "arn:aws:ec2:us-east-1:465976519110:instance/i-00c9a24c2a1d1dc17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c9a24c2a1d1dc17",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003d48199a4a9591d",
            "private_dns": "ip-10-0-0-42.ec2.internal",
            "private_ip": "10.0.0.42",
            "public_dns": "ec2-3-229-255-215.compute-1.amazonaws.com",
            "public_ip": "3.229.255.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0782f496a0bc13181",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c00491baac3ee4a5",
            "tags": {
              "Name": "web1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f262e8a5141bb021"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:internet-gateway/igw-076295eca43205419",
            "id": "igw-076295eca43205419",
            "owner_id": "465976519110",
            "tags": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08f30dad3397f5c90",
            "owner_id": "465976519110",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076295eca43205419",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077ba5fc712184095",
            "route_table_id": "rtb-08f30dad3397f5c90",
            "subnet_id": "subnet-0c00491baac3ee4a5"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f86f45fc36fd84c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "http",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": null,
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:security-group/sg-0f262e8a5141bb021",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f262e8a5141bb021",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200625091531562100000006",
            "name_prefix": null,
            "owner_id": "465976519110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:subnet/subnet-028d1a097bd950c84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/26",
            "id": "subnet-028d1a097bd950c84",
            "map_public_ip_on_launch": false,
            "owner_id": "465976519110",
            "tags": {
              "Name": "prod-subnet-private-1"
            },
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:subnet/subnet-019d31230ed751661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/26",
            "id": "subnet-019d31230ed751661",
            "map_public_ip_on_launch": false,
            "owner_id": "465976519110",
            "tags": {
              "Name": "prod-subnet-private-2"
            },
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:subnet/subnet-0c00491baac3ee4a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "id": "subnet-0c00491baac3ee4a5",
            "map_public_ip_on_launch": true,
            "owner_id": "465976519110",
            "tags": {
              "Name": "prod-subnet-public-1"
            },
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:subnet/subnet-0ecf679e3d272ed40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/26",
            "id": "subnet-0ecf679e3d272ed40",
            "map_public_ip_on_launch": true,
            "owner_id": "465976519110",
            "tags": {
              "Name": "prod-subnet-public-2"
            },
            "vpc_id": "vpc-0df5252540973726d"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465976519110:vpc/vpc-0df5252540973726d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d9bf83e601c4c69",
            "default_route_table_id": "rtb-0cfd6182fac43ea6e",
            "default_security_group_id": "sg-0cc8aaaa0c25af94a",
            "dhcp_options_id": "dopt-5450d62e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0df5252540973726d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cfd6182fac43ea6e",
            "owner_id": "465976519110",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}